Javadoc for commons-iterators:2.2.1

--- a/allclasses-noframe.html
+++ b/allclasses-noframe.html
@@ -24,36 +24,40 @@
 <li><a href="net/markenwerk/commons/iterators/ConvertingIterator.html" title="class in net.markenwerk.commons.iterators">ConvertingIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/CountDownIterator.html" title="class in net.markenwerk.commons.iterators">CountDownIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/CountUpIterator.html" title="class in net.markenwerk.commons.iterators">CountUpIterator</a></li>
-<li><a href="net/markenwerk/commons/exceptions/CreationException.html" title="class in net.markenwerk.commons.exceptions">CreationException</a></li>
 <li><a href="net/markenwerk/commons/iterators/DoubleArrayIterator.html" title="class in net.markenwerk.commons.iterators">DoubleArrayIterator</a></li>
 <li><a href="net/markenwerk/commons/datastructures/Either.html" title="class in net.markenwerk.commons.datastructures">Either</a></li>
 <li><a href="net/markenwerk/commons/iterators/EmptyIterator.html" title="class in net.markenwerk.commons.iterators">EmptyIterator</a></li>
 <li><a href="net/markenwerk/commons/datastructures/Entry.html" title="class in net.markenwerk.commons.datastructures">Entry</a></li>
 <li><a href="net/markenwerk/commons/iterators/EnumerationIterator.html" title="class in net.markenwerk.commons.iterators">EnumerationIterator</a></li>
-<li><a href="net/markenwerk/commons/exceptions/EvaluationException.html" title="class in net.markenwerk.commons.exceptions">EvaluationException</a></li>
 <li><a href="net/markenwerk/commons/iterators/FilteredIterator.html" title="class in net.markenwerk.commons.iterators">FilteredIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/FloatArrayIterator.html" title="class in net.markenwerk.commons.iterators">FloatArrayIterator</a></li>
 <li><a href="net/markenwerk/commons/interfaces/Handler.html" title="interface in net.markenwerk.commons.interfaces"><span class="interfaceName">Handler</span></a></li>
+<li><a href="net/markenwerk/commons/exceptions/HandlingException.html" title="class in net.markenwerk.commons.exceptions">HandlingException</a></li>
 <li><a href="net/markenwerk/commons/iterators/IndexedIterator.html" title="class in net.markenwerk.commons.iterators">IndexedIterator</a></li>
+<li><a href="net/markenwerk/commons/iterators/InfiniteIterator.html" title="class in net.markenwerk.commons.iterators">InfiniteIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/InfixedIterator.html" title="class in net.markenwerk.commons.iterators">InfixedIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/IntegerArrayIterator.html" title="class in net.markenwerk.commons.iterators">IntegerArrayIterator</a></li>
 <li><a href="net/markenwerk/commons/datastructures/Left.html" title="class in net.markenwerk.commons.datastructures">Left</a></li>
 <li><a href="net/markenwerk/commons/iterators/LongArrayIterator.html" title="class in net.markenwerk.commons.iterators">LongArrayIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/LookAhead.html" title="interface in net.markenwerk.commons.iterators"><span class="interfaceName">LookAhead</span></a></li>
 <li><a href="net/markenwerk/commons/iterators/LookAheadIterator.html" title="class in net.markenwerk.commons.iterators">LookAheadIterator</a></li>
+<li><a href="net/markenwerk/commons/iterators/NodeListIterator.html" title="class in net.markenwerk.commons.iterators">NodeListIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/NullFreeIterator.html" title="class in net.markenwerk.commons.iterators">NullFreeIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/NullSaveIterator.html" title="class in net.markenwerk.commons.iterators">NullSaveIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/ObjectIterator.html" title="class in net.markenwerk.commons.iterators">ObjectIterator</a></li>
 <li><a href="net/markenwerk/commons/iterators/OptionalIterator.html" title="class in net.markenwerk.commons.iterators">OptionalIterator</a></li>
-<li><a href="net/markenwerk/commons/interfaces/OrderProducer.html" title="interface in net.markenwerk.commons.interfaces"><span class="interfaceName">OrderProducer</span></a></li>
-<li><a href="net/markenwerk/commons/interfaces/OrderProvider.html" title="interface in net.markenwerk.commons.interfaces"><span class="interfaceName">OrderProvider</span></a></li>
 <li><a href="net/markenwerk/commons/datastructures/Pair.html" title="class in net.markenwerk.commons.datastructures">Pair</a></li>
+<li><a href="net/markenwerk/commons/iterators/PairIterator.html" title="class in net.markenwerk.commons.iterators">PairIterator</a></li>
 <li><a href="net/markenwerk/commons/interfaces/Predicate.html" title="interface in net.markenwerk.commons.interfaces"><span class="interfaceName">Predicate</span></a></li>
 <li><a href="net/markenwerk/commons/iterators/PrefixedIterator.html" title="class in net.markenwerk.commons.iterators">PrefixedIterator</a></li>
+<li><a href="net/markenwerk/commons/exceptions/ProcessingException.html" title="class in net.markenwerk.commons.exceptions">ProcessingException</a></li>
+<li><a href="net/markenwerk/commons/interfaces/Processor.html" title="interface in net.markenwerk.commons.interfaces"><span class="interfaceName">Processor</span></a></li>
 <li><a href="net/markenwerk/commons/interfaces/Producer.html" title="interface in net.markenwerk.commons.interfaces"><span class="interfaceName">Producer</span></a></li>
+<li><a href="net/markenwerk/commons/exceptions/ProductionException.html" title="class in net.markenwerk.commons.exceptions">ProductionException</a></li>
 <li><a href="net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators"><span class="interfaceName">ProtectedIterator</span></a></li>
 <li><a href="net/markenwerk/commons/iterators/ProtectingIterator.html" title="class in net.markenwerk.commons.iterators">ProtectingIterator</a></li>
 <li><a href="net/markenwerk/commons/interfaces/Provider.html" title="interface in net.markenwerk.commons.interfaces"><span class="interfaceName">Provider</span></a></li>
+<li><a href="net/markenwerk/commons/exceptions/ProvisioningException.html" title="class in net.markenwerk.commons.exceptions">ProvisioningException</a></li>
 <li><a href="net/markenwerk/commons/iterators/RemoveHandlerIterator.html" title="class in net.markenwerk.commons.iterators">RemoveHandlerIterator</a></li>
 <li><a href="net/markenwerk/commons/datastructures/Right.html" title="class in net.markenwerk.commons.datastructures">Right</a></li>
 <li><a href="net/markenwerk/commons/iterators/ShortArrayIterator.html" title="class in net.markenwerk.commons.iterators">ShortArrayIterator</a></li>
@@ -61,7 +65,9 @@
 <li><a href="net/markenwerk/commons/iterators/SuffixedIterator.html" title="class in net.markenwerk.commons.iterators">SuffixedIterator</a></li>
 <li><a href="net/markenwerk/commons/interfaces/Translator.html" title="interface in net.markenwerk.commons.interfaces"><span class="interfaceName">Translator</span></a></li>
 <li><a href="net/markenwerk/commons/datastructures/Triple.html" title="class in net.markenwerk.commons.datastructures">Triple</a></li>
+<li><a href="net/markenwerk/commons/iterators/TripleIterator.html" title="class in net.markenwerk.commons.iterators">TripleIterator</a></li>
 <li><a href="net/markenwerk/commons/datastructures/Tuple.html" title="class in net.markenwerk.commons.datastructures">Tuple</a></li>
+<li><a href="net/markenwerk/commons/iterators/TupleIterator.html" title="class in net.markenwerk.commons.iterators">TupleIterator</a></li>
 <li><a href="net/markenwerk/commons/datastructures/Wrapper.html" title="class in net.markenwerk.commons.datastructures">Wrapper</a></li>
 </ul>
 </div>
