--- a/net/markenwerk/commons/datastructures/Either.html
+++ b/net/markenwerk/commons/datastructures/Either.html
@@ -213,8 +213,7 @@ extends <a href="http://docs.oracle.com/javase/8/docs/api/java/lang/Object.html?
 <dl>
 <dt><span class="returnLabel">Returns:</span></dt>
 <dd>If this <a href="../../../../net/markenwerk/commons/datastructures/Either.html" title="class in net.markenwerk.commons.datastructures"><code>Either</code></a> is a
-         <a href="../../../../net/markenwerk/commons/datastructures/Left.html" title="class in net.markenwerk.commons.datastructures"><code>Left</code></a> <a href="../../../../net/markenwerk/commons/datastructures/Either.html" title="class in net.markenwerk.commons.datastructures"><code>Either</code></a>
-         .</dd>
+         <a href="../../../../net/markenwerk/commons/datastructures/Left.html" title="class in net.markenwerk.commons.datastructures"><code>Left</code></a> <a href="../../../../net/markenwerk/commons/datastructures/Either.html" title="class in net.markenwerk.commons.datastructures"><code>Either</code></a>.</dd>
 </dl>
 </li>
 </ul>
@@ -250,7 +249,7 @@ extends <a href="http://docs.oracle.com/javase/8/docs/api/java/lang/Object.html?
 <dt><span class="returnLabel">Returns:</span></dt>
 <dd>If this <a href="../../../../net/markenwerk/commons/datastructures/Either.html" title="class in net.markenwerk.commons.datastructures"><code>Either</code></a> is a
          <a href="../../../../net/markenwerk/commons/datastructures/Right.html" title="class in net.markenwerk.commons.datastructures"><code>Right</code></a>
-         <a href="../../../../net/markenwerk/commons/datastructures/Either.html" title="class in net.markenwerk.commons.datastructures"><code>Either</code></a> .</dd>
+         <a href="../../../../net/markenwerk/commons/datastructures/Either.html" title="class in net.markenwerk.commons.datastructures"><code>Either</code></a>.</dd>
 </dl>
 </li>
 </ul>
