--- a/net/markenwerk/commons/datastructures/package-use.html
+++ b/net/markenwerk/commons/datastructures/package-use.html
@@ -149,6 +149,23 @@
  key-value-pair.</div>
 </td>
 </tr>
+<tr class="rowColor">
+<td class="colOne"><a href="../../../../net/markenwerk/commons/datastructures/class-use/Pair.html#net.markenwerk.commons.iterators">Pair</a>
+<div class="block">A <a href="../../../../net/markenwerk/commons/datastructures/Pair.html" title="class in net.markenwerk.commons.datastructures"><code>Pair</code></a> is a simple immutable container class that holds two values of
+ a similar type.</div>
+</td>
+</tr>
+<tr class="altColor">
+<td class="colOne"><a href="../../../../net/markenwerk/commons/datastructures/class-use/Triple.html#net.markenwerk.commons.iterators">Triple</a>
+<div class="block">A <a href="../../../../net/markenwerk/commons/datastructures/Triple.html" title="class in net.markenwerk.commons.datastructures"><code>Triple</code></a> is a simple immutable container class that holds three
+ values.</div>
+</td>
+</tr>
+<tr class="rowColor">
+<td class="colOne"><a href="../../../../net/markenwerk/commons/datastructures/class-use/Tuple.html#net.markenwerk.commons.iterators">Tuple</a>
+<div class="block">A <a href="../../../../net/markenwerk/commons/datastructures/Tuple.html" title="class in net.markenwerk.commons.datastructures"><code>Tuple</code></a> is a simple immutable container class that holds two values.</div>
+</td>
+</tr>
 </tbody>
 </table>
 </li>
