--- a/net/markenwerk/commons/exceptions/package-summary.html
+++ b/net/markenwerk/commons/exceptions/package-summary.html
@@ -85,22 +85,36 @@
 <tr class="altColor">
 <td class="colFirst"><a href="../../../../net/markenwerk/commons/exceptions/ConversionException.html" title="class in net.markenwerk.commons.exceptions">ConversionException</a></td>
 <td class="colLast">
-<div class="block">A <a href="../../../../net/markenwerk/commons/exceptions/ConversionException.html" title="class in net.markenwerk.commons.exceptions"><code>ConversionException</code></a> indicates that an arbitrary conversion
- (transformation, translation, projection, evaluation, ...) has failed.</div>
+<div class="block">A <a href="../../../../net/markenwerk/commons/exceptions/ConversionException.html" title="class in net.markenwerk.commons.exceptions"><code>ConversionException</code></a> indicates that a <a href="../../../../net/markenwerk/commons/interfaces/Converter.html" title="interface in net.markenwerk.commons.interfaces"><code>Converter</code></a> (or
+ <a href="../../../../net/markenwerk/commons/interfaces/Translator.html" title="interface in net.markenwerk.commons.interfaces"><code>Translator</code></a>) failed to convert (or revert )a value.</div>
 </td>
 </tr>
 <tr class="rowColor">
-<td class="colFirst"><a href="../../../../net/markenwerk/commons/exceptions/CreationException.html" title="class in net.markenwerk.commons.exceptions">CreationException</a></td>
+<td class="colFirst"><a href="../../../../net/markenwerk/commons/exceptions/HandlingException.html" title="class in net.markenwerk.commons.exceptions">HandlingException</a></td>
 <td class="colLast">
-<div class="block">A <a href="../../../../net/markenwerk/commons/exceptions/CreationException.html" title="class in net.markenwerk.commons.exceptions"><code>CreationException</code></a> indicates that a <a href="../../../../net/markenwerk/commons/interfaces/Producer.html" title="interface in net.markenwerk.commons.interfaces"><code>Producer</code></a> failed to
- produce a product.</div>
+<div class="block">A <a href="../../../../net/markenwerk/commons/exceptions/HandlingException.html" title="class in net.markenwerk.commons.exceptions"><code>HandlingException</code></a> indicates that a <a href="../../../../net/markenwerk/commons/interfaces/Handler.html" title="interface in net.markenwerk.commons.interfaces"><code>Handler</code></a> failed to
+ handle a value.</div>
 </td>
 </tr>
 <tr class="altColor">
-<td class="colFirst"><a href="../../../../net/markenwerk/commons/exceptions/EvaluationException.html" title="class in net.markenwerk.commons.exceptions">EvaluationException</a></td>
+<td class="colFirst"><a href="../../../../net/markenwerk/commons/exceptions/ProcessingException.html" title="class in net.markenwerk.commons.exceptions">ProcessingException</a></td>
 <td class="colLast">
-<div class="block">A <a href="../../../../net/markenwerk/commons/exceptions/EvaluationException.html" title="class in net.markenwerk.commons.exceptions"><code>EvaluationException</code></a> indicates that the evaluation of a
- <a href="../../../../net/markenwerk/commons/interfaces/Predicate.html" title="interface in net.markenwerk.commons.interfaces"><code>Predicate</code></a> has failed.</div>
+<div class="block">A <a href="../../../../net/markenwerk/commons/exceptions/ProcessingException.html" title="class in net.markenwerk.commons.exceptions"><code>ProcessingException</code></a> indicates that a <a href="http://docs.oracle.com/javase/8/docs/api/javax/annotation/processing/Processor.html?is-external=true" title="class or interface in javax.annotation.processing"><code>Processor</code></a> failed to
+ process a value.</div>
+</td>
+</tr>
+<tr class="rowColor">
+<td class="colFirst"><a href="../../../../net/markenwerk/commons/exceptions/ProductionException.html" title="class in net.markenwerk.commons.exceptions">ProductionException</a></td>
+<td class="colLast">
+<div class="block">A <a href="../../../../net/markenwerk/commons/exceptions/ProductionException.html" title="class in net.markenwerk.commons.exceptions"><code>ProductionException</code></a> indicates that a <a href="../../../../net/markenwerk/commons/interfaces/Producer.html" title="interface in net.markenwerk.commons.interfaces"><code>Producer</code></a> failed to
+ produce a value.</div>
+</td>
+</tr>
+<tr class="altColor">
+<td class="colFirst"><a href="../../../../net/markenwerk/commons/exceptions/ProvisioningException.html" title="class in net.markenwerk.commons.exceptions">ProvisioningException</a></td>
+<td class="colLast">
+<div class="block">A <a href="../../../../net/markenwerk/commons/exceptions/ProvisioningException.html" title="class in net.markenwerk.commons.exceptions"><code>ProvisioningException</code></a> indicates that a <a href="http://docs.oracle.com/javase/8/docs/api/java/security/Provider.html?is-external=true" title="class or interface in java.security"><code>Provider</code></a> failed to
+ provide a value.</div>
 </td>
 </tr>
 </tbody>
