--- a/net/markenwerk/commons/exceptions/package-tree.html
+++ b/net/markenwerk/commons/exceptions/package-tree.html
@@ -88,8 +88,10 @@
 <li type="circle">java.lang.<a href="http://docs.oracle.com/javase/8/docs/api/java/lang/RuntimeException.html?is-external=true" title="class or interface in java.lang"><span class="typeNameLink">RuntimeException</span></a>
 <ul>
 <li type="circle">net.markenwerk.commons.exceptions.<a href="../../../../net/markenwerk/commons/exceptions/ConversionException.html" title="class in net.markenwerk.commons.exceptions"><span class="typeNameLink">ConversionException</span></a></li>
-<li type="circle">net.markenwerk.commons.exceptions.<a href="../../../../net/markenwerk/commons/exceptions/CreationException.html" title="class in net.markenwerk.commons.exceptions"><span class="typeNameLink">CreationException</span></a></li>
-<li type="circle">net.markenwerk.commons.exceptions.<a href="../../../../net/markenwerk/commons/exceptions/EvaluationException.html" title="class in net.markenwerk.commons.exceptions"><span class="typeNameLink">EvaluationException</span></a></li>
+<li type="circle">net.markenwerk.commons.exceptions.<a href="../../../../net/markenwerk/commons/exceptions/HandlingException.html" title="class in net.markenwerk.commons.exceptions"><span class="typeNameLink">HandlingException</span></a></li>
+<li type="circle">net.markenwerk.commons.exceptions.<a href="../../../../net/markenwerk/commons/exceptions/ProcessingException.html" title="class in net.markenwerk.commons.exceptions"><span class="typeNameLink">ProcessingException</span></a></li>
+<li type="circle">net.markenwerk.commons.exceptions.<a href="../../../../net/markenwerk/commons/exceptions/ProductionException.html" title="class in net.markenwerk.commons.exceptions"><span class="typeNameLink">ProductionException</span></a></li>
+<li type="circle">net.markenwerk.commons.exceptions.<a href="../../../../net/markenwerk/commons/exceptions/ProvisioningException.html" title="class in net.markenwerk.commons.exceptions"><span class="typeNameLink">ProvisioningException</span></a></li>
 </ul>
 </li>
 </ul>
