--- a/net/markenwerk/commons/interfaces/package-frame.html
+++ b/net/markenwerk/commons/interfaces/package-frame.html
@@ -16,9 +16,8 @@
 <li><a href="Callback.html" title="interface in net.markenwerk.commons.interfaces" target="classFrame"><span class="interfaceName">Callback</span></a></li>
 <li><a href="Converter.html" title="interface in net.markenwerk.commons.interfaces" target="classFrame"><span class="interfaceName">Converter</span></a></li>
 <li><a href="Handler.html" title="interface in net.markenwerk.commons.interfaces" target="classFrame"><span class="interfaceName">Handler</span></a></li>
-<li><a href="OrderProducer.html" title="interface in net.markenwerk.commons.interfaces" target="classFrame"><span class="interfaceName">OrderProducer</span></a></li>
-<li><a href="OrderProvider.html" title="interface in net.markenwerk.commons.interfaces" target="classFrame"><span class="interfaceName">OrderProvider</span></a></li>
 <li><a href="Predicate.html" title="interface in net.markenwerk.commons.interfaces" target="classFrame"><span class="interfaceName">Predicate</span></a></li>
+<li><a href="Processor.html" title="interface in net.markenwerk.commons.interfaces" target="classFrame"><span class="interfaceName">Processor</span></a></li>
 <li><a href="Producer.html" title="interface in net.markenwerk.commons.interfaces" target="classFrame"><span class="interfaceName">Producer</span></a></li>
 <li><a href="Provider.html" title="interface in net.markenwerk.commons.interfaces" target="classFrame"><span class="interfaceName">Provider</span></a></li>
 <li><a href="Translator.html" title="interface in net.markenwerk.commons.interfaces" target="classFrame"><span class="interfaceName">Translator</span></a></li>
