--- a/net/markenwerk/commons/interfaces/package-tree.html
+++ b/net/markenwerk/commons/interfaces/package-tree.html
@@ -79,24 +79,17 @@
 <div class="contentContainer">
 <h2 title="Interface Hierarchy">Interface Hierarchy</h2>
 <ul>
-<li type="circle">net.markenwerk.commons.interfaces.<a href="../../../../net/markenwerk/commons/interfaces/Callback.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">Callback</span></a>&lt;Result&gt;</li>
+<li type="circle">net.markenwerk.commons.interfaces.<a href="../../../../net/markenwerk/commons/interfaces/Callback.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">Callback</span></a>&lt;Callee,Result&gt;</li>
 <li type="circle">net.markenwerk.commons.interfaces.<a href="../../../../net/markenwerk/commons/interfaces/Converter.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">Converter</span></a>&lt;From,To&gt;
 <ul>
 <li type="circle">net.markenwerk.commons.interfaces.<a href="../../../../net/markenwerk/commons/interfaces/Translator.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">Translator</span></a>&lt;From,To&gt;</li>
 </ul>
 </li>
-<li type="circle">net.markenwerk.commons.interfaces.<a href="../../../../net/markenwerk/commons/interfaces/Handler.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">Handler</span></a>&lt;Event&gt;</li>
-<li type="circle">net.markenwerk.commons.interfaces.<a href="../../../../net/markenwerk/commons/interfaces/OrderProvider.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">OrderProvider</span></a>&lt;Order,Product&gt;
-<ul>
-<li type="circle">net.markenwerk.commons.interfaces.<a href="../../../../net/markenwerk/commons/interfaces/OrderProducer.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">OrderProducer</span></a>&lt;Order,Product&gt;</li>
-</ul>
-</li>
+<li type="circle">net.markenwerk.commons.interfaces.<a href="../../../../net/markenwerk/commons/interfaces/Handler.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">Handler</span></a>&lt;Value&gt;</li>
 <li type="circle">net.markenwerk.commons.interfaces.<a href="../../../../net/markenwerk/commons/interfaces/Predicate.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">Predicate</span></a>&lt;Subject&gt;</li>
-<li type="circle">net.markenwerk.commons.interfaces.<a href="../../../../net/markenwerk/commons/interfaces/Provider.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">Provider</span></a>&lt;Product&gt;
-<ul>
-<li type="circle">net.markenwerk.commons.interfaces.<a href="../../../../net/markenwerk/commons/interfaces/Producer.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">Producer</span></a>&lt;Product&gt;</li>
-</ul>
-</li>
+<li type="circle">net.markenwerk.commons.interfaces.<a href="../../../../net/markenwerk/commons/interfaces/Processor.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">Processor</span></a>&lt;Value&gt;</li>
+<li type="circle">net.markenwerk.commons.interfaces.<a href="../../../../net/markenwerk/commons/interfaces/Producer.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">Producer</span></a>&lt;Order,Product&gt;</li>
+<li type="circle">net.markenwerk.commons.interfaces.<a href="../../../../net/markenwerk/commons/interfaces/Provider.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">Provider</span></a>&lt;Product&gt;</li>
 </ul>
 </div>
 <!-- ======= START OF BOTTOM NAVBAR ====== -->
