--- a/net/markenwerk/commons/interfaces/package-use.html
+++ b/net/markenwerk/commons/interfaces/package-use.html
@@ -108,17 +108,6 @@
  evaluate, ...) values from one form into another.</div>
 </td>
 </tr>
-<tr class="rowColor">
-<td class="colOne"><a href="../../../../net/markenwerk/commons/interfaces/class-use/OrderProvider.html#net.markenwerk.commons.interfaces">OrderProvider</a>
-<div class="block">A <a href="../../../../net/markenwerk/commons/interfaces/OrderProvider.html" title="interface in net.markenwerk.commons.interfaces"><code>OrderProvider</code></a> provides customized values of the corresponding
- product type.</div>
-</td>
-</tr>
-<tr class="altColor">
-<td class="colOne"><a href="../../../../net/markenwerk/commons/interfaces/class-use/Provider.html#net.markenwerk.commons.interfaces">Provider</a>
-<div class="block">A <a href="../../../../net/markenwerk/commons/interfaces/Provider.html" title="interface in net.markenwerk.commons.interfaces"><code>Provider</code></a> provides values of the corresponding product type.</div>
-</td>
-</tr>
 </tbody>
 </table>
 </li>
@@ -139,15 +128,20 @@
 </tr>
 <tr class="rowColor">
 <td class="colOne"><a href="../../../../net/markenwerk/commons/interfaces/class-use/Handler.html#net.markenwerk.commons.iterators">Handler</a>
-<div class="block">For an arbitrary process, that may encounter some kind of event and needs to
- delegate the event handling, a <a href="../../../../net/markenwerk/commons/interfaces/Handler.html" title="interface in net.markenwerk.commons.interfaces"><code>Handler</code></a> is used, to convey that event
- from the executor of the process (hereafter: executor) back to the initiator
- of the process (hereafter: initiator).</div>
+<div class="block">For an arbitrary process, that may encounter some condition and needs to
+ delegate the handling, a <a href="../../../../net/markenwerk/commons/interfaces/Handler.html" title="interface in net.markenwerk.commons.interfaces"><code>Handler</code></a> is used, to convey the involved
+ value from the executor of the process (hereafter: executor) back to the
+ initiator of the process (hereafter: initiator).</div>
 </td>
 </tr>
 <tr class="altColor">
 <td class="colOne"><a href="../../../../net/markenwerk/commons/interfaces/class-use/Predicate.html#net.markenwerk.commons.iterators">Predicate</a>
 <div class="block">A <a href="../../../../net/markenwerk/commons/interfaces/Predicate.html" title="interface in net.markenwerk.commons.interfaces"><code>Predicate</code></a> is used to perform arbitrary test on test subject.</div>
+</td>
+</tr>
+<tr class="rowColor">
+<td class="colOne"><a href="../../../../net/markenwerk/commons/interfaces/class-use/Provider.html#net.markenwerk.commons.iterators">Provider</a>
+<div class="block">A <a href="../../../../net/markenwerk/commons/interfaces/Provider.html" title="interface in net.markenwerk.commons.interfaces"><code>Provider</code></a> provides values of the corresponding product type.</div>
 </td>
 </tr>
 </tbody>
