--- a/net/markenwerk/commons/iterators/SuffixedIterator.html
+++ b/net/markenwerk/commons/iterators/SuffixedIterator.html
@@ -50,7 +50,7 @@ var activeTableTab = "activeTableTab";
 <div class="subNav">
 <ul class="navList">
 <li><a href="../../../../net/markenwerk/commons/iterators/StringTokenizerIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
-<li>Next&nbsp;Class</li>
+<li><a href="../../../../net/markenwerk/commons/iterators/TripleIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../../../index.html?net/markenwerk/commons/iterators/SuffixedIterator.html" target="_top">Frames</a></li>
@@ -319,7 +319,7 @@ implements <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.
 <div class="subNav">
 <ul class="navList">
 <li><a href="../../../../net/markenwerk/commons/iterators/StringTokenizerIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
-<li>Next&nbsp;Class</li>
+<li><a href="../../../../net/markenwerk/commons/iterators/TripleIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../../../index.html?net/markenwerk/commons/iterators/SuffixedIterator.html" target="_top">Frames</a></li>
