--- a/net/markenwerk/commons/iterators/package-frame.html
+++ b/net/markenwerk/commons/iterators/package-frame.html
@@ -32,20 +32,25 @@
 <li><a href="FilteredIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">FilteredIterator</a></li>
 <li><a href="FloatArrayIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">FloatArrayIterator</a></li>
 <li><a href="IndexedIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">IndexedIterator</a></li>
+<li><a href="InfiniteIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">InfiniteIterator</a></li>
 <li><a href="InfixedIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">InfixedIterator</a></li>
 <li><a href="IntegerArrayIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">IntegerArrayIterator</a></li>
 <li><a href="LongArrayIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">LongArrayIterator</a></li>
 <li><a href="LookAheadIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">LookAheadIterator</a></li>
+<li><a href="NodeListIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">NodeListIterator</a></li>
 <li><a href="NullFreeIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">NullFreeIterator</a></li>
 <li><a href="NullSaveIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">NullSaveIterator</a></li>
 <li><a href="ObjectIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">ObjectIterator</a></li>
 <li><a href="OptionalIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">OptionalIterator</a></li>
+<li><a href="PairIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">PairIterator</a></li>
 <li><a href="PrefixedIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">PrefixedIterator</a></li>
 <li><a href="ProtectingIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">ProtectingIterator</a></li>
 <li><a href="RemoveHandlerIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">RemoveHandlerIterator</a></li>
 <li><a href="ShortArrayIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">ShortArrayIterator</a></li>
 <li><a href="StringTokenizerIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">StringTokenizerIterator</a></li>
 <li><a href="SuffixedIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">SuffixedIterator</a></li>
+<li><a href="TripleIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">TripleIterator</a></li>
+<li><a href="TupleIterator.html" title="class in net.markenwerk.commons.iterators" target="classFrame">TupleIterator</a></li>
 </ul>
 </div>
 </body>
