--- a/net/markenwerk/commons/iterators/package-summary.html
+++ b/net/markenwerk/commons/iterators/package-summary.html
@@ -215,6 +215,13 @@
 </td>
 </tr>
 <tr class="altColor">
+<td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/InfiniteIterator.html" title="class in net.markenwerk.commons.iterators">InfiniteIterator</a>&lt;Payload&gt;</td>
+<td class="colLast">
+<div class="block">An <a href="../../../../net/markenwerk/commons/iterators/InfiniteIterator.html" title="class in net.markenwerk.commons.iterators"><code>InfiniteIterator</code></a> is a <a href="../../../../net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators"><code>ProtectedIterator</code></a> that infinitely
+ iterates, using a <a href="../../../../net/markenwerk/commons/interfaces/Provider.html" title="interface in net.markenwerk.commons.interfaces"><code>Provider</code></a>, tom provide further elements.</div>
+</td>
+</tr>
+<tr class="rowColor">
 <td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/InfixedIterator.html" title="class in net.markenwerk.commons.iterators">InfixedIterator</a>&lt;Payload&gt;</td>
 <td class="colLast">
 <div class="block">An <a href="../../../../net/markenwerk/commons/iterators/InfixedIterator.html" title="class in net.markenwerk.commons.iterators"><code>InfixedIterator</code></a> is an <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a> that can be wrapped around
@@ -222,26 +229,33 @@
  value yielded by the given <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a>.</div>
 </td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/IntegerArrayIterator.html" title="class in net.markenwerk.commons.iterators">IntegerArrayIterator</a></td>
 <td class="colLast">
 <div class="block">An <a href="../../../../net/markenwerk/commons/iterators/IntegerArrayIterator.html" title="class in net.markenwerk.commons.iterators"><code>IntegerArrayIterator</code></a> is an <a href="../../../../net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators"><code>ProtectedIterator</code></a> that iterates
  over a given <code>int[]</code>.</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/LongArrayIterator.html" title="class in net.markenwerk.commons.iterators">LongArrayIterator</a></td>
 <td class="colLast">
 <div class="block">A <a href="../../../../net/markenwerk/commons/iterators/LongArrayIterator.html" title="class in net.markenwerk.commons.iterators"><code>LongArrayIterator</code></a> is an <a href="../../../../net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators"><code>ProtectedIterator</code></a> that iterates
  over a given <code>long[]</code>.</div>
 </td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/LookAheadIterator.html" title="class in net.markenwerk.commons.iterators">LookAheadIterator</a>&lt;Payload&gt;</td>
 <td class="colLast">
 <div class="block">A <a href="../../../../net/markenwerk/commons/iterators/LookAheadIterator.html" title="class in net.markenwerk.commons.iterators"><code>LookAheadIterator</code></a> is an <a href="../../../../net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators"><code>ProtectedIterator</code></a> that can be wrapped around
  a given <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a> and yields a <a href="../../../../net/markenwerk/commons/iterators/LookAhead.html" title="interface in net.markenwerk.commons.iterators"><code>LookAhead</code></a> container that holds
  the current and the next payload value of the given <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a>.</div>
+</td>
+</tr>
+<tr class="rowColor">
+<td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/NodeListIterator.html" title="class in net.markenwerk.commons.iterators">NodeListIterator</a></td>
+<td class="colLast">
+<div class="block">An <a href="../../../../net/markenwerk/commons/iterators/NodeListIterator.html" title="class in net.markenwerk.commons.iterators"><code>NodeListIterator</code></a> is a <a href="../../../../net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators"><code>ProtectedIterator</code></a> that iterates over
+ a given <a href="http://docs.oracle.com/javase/8/docs/api/org/w3c/dom/NodeList.html?is-external=true" title="class or interface in org.w3c.dom"><code>NodeList</code></a>.</div>
 </td>
 </tr>
 <tr class="altColor">
@@ -276,6 +290,13 @@
 </td>
 </tr>
 <tr class="altColor">
+<td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/PairIterator.html" title="class in net.markenwerk.commons.iterators">PairIterator</a>&lt;Payload&gt;</td>
+<td class="colLast">
+<div class="block">An <a href="../../../../net/markenwerk/commons/iterators/PairIterator.html" title="class in net.markenwerk.commons.iterators"><code>PairIterator</code></a> is a <a href="../../../../net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators"><code>ProtectedIterator</code></a> that iterates over a
+ given <a href="../../../../net/markenwerk/commons/datastructures/Pair.html" title="class in net.markenwerk.commons.datastructures"><code>Pair</code></a>.</div>
+</td>
+</tr>
+<tr class="rowColor">
 <td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/PrefixedIterator.html" title="class in net.markenwerk.commons.iterators">PrefixedIterator</a>&lt;Payload&gt;</td>
 <td class="colLast">
 <div class="block">An <a href="../../../../net/markenwerk/commons/iterators/PrefixedIterator.html" title="class in net.markenwerk.commons.iterators"><code>PrefixedIterator</code></a> is an <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a> that can be wrapped around
@@ -283,7 +304,7 @@
  all values yielded by the given <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a>.</div>
 </td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/ProtectingIterator.html" title="class in net.markenwerk.commons.iterators">ProtectingIterator</a>&lt;Payload&gt;</td>
 <td class="colLast">
 <div class="block">An <a href="../../../../net/markenwerk/commons/iterators/ProtectingIterator.html" title="class in net.markenwerk.commons.iterators"><code>ProtectingIterator</code></a> is an <a href="../../../../net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators"><code>ProtectedIterator</code></a> that can be
@@ -293,7 +314,7 @@
  <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a>.</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/RemoveHandlerIterator.html" title="class in net.markenwerk.commons.iterators">RemoveHandlerIterator</a>&lt;Payload&gt;</td>
 <td class="colLast">
 <div class="block">An <a href="../../../../net/markenwerk/commons/iterators/RemoveHandlerIterator.html" title="class in net.markenwerk.commons.iterators"><code>RemoveHandlerIterator</code></a> is an <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a> that can be wrapped
@@ -302,14 +323,14 @@
  for the current value.</div>
 </td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/ShortArrayIterator.html" title="class in net.markenwerk.commons.iterators">ShortArrayIterator</a></td>
 <td class="colLast">
 <div class="block">A <a href="../../../../net/markenwerk/commons/iterators/ShortArrayIterator.html" title="class in net.markenwerk.commons.iterators"><code>ShortArrayIterator</code></a> is an <a href="../../../../net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators"><code>ProtectedIterator</code></a> that iterates
  over a given <code>short[]</code>.</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/StringTokenizerIterator.html" title="class in net.markenwerk.commons.iterators">StringTokenizerIterator</a></td>
 <td class="colLast">
 <div class="block">A <a href="../../../../net/markenwerk/commons/iterators/StringTokenizerIterator.html" title="class in net.markenwerk.commons.iterators"><code>StringTokenizerIterator</code></a> is an <a href="../../../../net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators"><code>ProtectedIterator</code></a> that can be wrapped
@@ -317,12 +338,26 @@
  given <a href="http://docs.oracle.com/javase/8/docs/api/java/util/StringTokenizer.html?is-external=true" title="class or interface in java.util"><code>StringTokenizer</code></a>.</div>
 </td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/SuffixedIterator.html" title="class in net.markenwerk.commons.iterators">SuffixedIterator</a>&lt;Payload&gt;</td>
 <td class="colLast">
 <div class="block">An <a href="../../../../net/markenwerk/commons/iterators/SuffixedIterator.html" title="class in net.markenwerk.commons.iterators"><code>SuffixedIterator</code></a> is an <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a> that can be wrapped around
  a given <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a> and yields some given suffix values after yielding
  all values yielded by the given <a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><code>Iterator</code></a>.</div>
+</td>
+</tr>
+<tr class="rowColor">
+<td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/TripleIterator.html" title="class in net.markenwerk.commons.iterators">TripleIterator</a>&lt;Payload&gt;</td>
+<td class="colLast">
+<div class="block">An <a href="../../../../net/markenwerk/commons/iterators/TripleIterator.html" title="class in net.markenwerk.commons.iterators"><code>TripleIterator</code></a> is a <a href="../../../../net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators"><code>ProtectedIterator</code></a> that iterates over a
+ given <a href="../../../../net/markenwerk/commons/datastructures/Triple.html" title="class in net.markenwerk.commons.datastructures"><code>Triple</code></a>.</div>
+</td>
+</tr>
+<tr class="altColor">
+<td class="colFirst"><a href="../../../../net/markenwerk/commons/iterators/TupleIterator.html" title="class in net.markenwerk.commons.iterators">TupleIterator</a>&lt;Payload&gt;</td>
+<td class="colLast">
+<div class="block">An <a href="../../../../net/markenwerk/commons/iterators/TupleIterator.html" title="class in net.markenwerk.commons.iterators"><code>TupleIterator</code></a> is a <a href="../../../../net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators"><code>ProtectedIterator</code></a> that iterates over a
+ given <a href="../../../../net/markenwerk/commons/datastructures/Tuple.html" title="class in net.markenwerk.commons.datastructures"><code>Tuple</code></a>.</div>
 </td>
 </tr>
 </tbody>
