--- a/overview-tree.html
+++ b/overview-tree.html
@@ -106,15 +106,18 @@
 <li type="circle">net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/FilteredIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">FilteredIterator</span></a>&lt;Payload&gt; (implements java.util.<a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util">Iterator</a>&lt;E&gt;)</li>
 <li type="circle">net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/FloatArrayIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">FloatArrayIterator</span></a> (implements net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators">ProtectedIterator</a>&lt;Payload&gt;)</li>
 <li type="circle">net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/IndexedIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">IndexedIterator</span></a>&lt;Payload&gt; (implements java.util.<a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util">Iterator</a>&lt;E&gt;)</li>
+<li type="circle">net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/InfiniteIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">InfiniteIterator</span></a>&lt;Payload&gt; (implements net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators">ProtectedIterator</a>&lt;Payload&gt;)</li>
 <li type="circle">net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/InfixedIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">InfixedIterator</span></a>&lt;Payload&gt; (implements java.util.<a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util">Iterator</a>&lt;E&gt;)</li>
 <li type="circle">net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/IntegerArrayIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">IntegerArrayIterator</span></a> (implements net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators">ProtectedIterator</a>&lt;Payload&gt;)</li>
 <li type="circle">net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/LongArrayIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">LongArrayIterator</span></a> (implements net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators">ProtectedIterator</a>&lt;Payload&gt;)</li>
 <li type="circle">net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/LookAheadIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">LookAheadIterator</span></a>&lt;Payload&gt; (implements net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators">ProtectedIterator</a>&lt;Payload&gt;)</li>
+<li type="circle">net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/NodeListIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">NodeListIterator</span></a> (implements net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators">ProtectedIterator</a>&lt;Payload&gt;)</li>
 <li type="circle">net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/NullFreeIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">NullFreeIterator</span></a>&lt;Payload&gt; (implements java.util.<a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util">Iterator</a>&lt;E&gt;)</li>
 <li type="circle">net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/NullSaveIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">NullSaveIterator</span></a>&lt;Payload&gt; (implements java.util.<a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util">Iterator</a>&lt;E&gt;)</li>
 <li type="circle">net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/ObjectIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">ObjectIterator</span></a>&lt;Payload&gt; (implements net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators">ProtectedIterator</a>&lt;Payload&gt;)</li>
 <li type="circle">net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/OptionalIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">OptionalIterator</span></a>&lt;Payload&gt; (implements net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators">ProtectedIterator</a>&lt;Payload&gt;)</li>
 <li type="circle">net.markenwerk.commons.datastructures.<a href="net/markenwerk/commons/datastructures/Pair.html" title="class in net.markenwerk.commons.datastructures"><span class="typeNameLink">Pair</span></a>&lt;Payload&gt;</li>
+<li type="circle">net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/PairIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">PairIterator</span></a>&lt;Payload&gt; (implements net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators">ProtectedIterator</a>&lt;Payload&gt;)</li>
 <li type="circle">net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/PrefixedIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">PrefixedIterator</span></a>&lt;Payload&gt; (implements java.util.<a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util">Iterator</a>&lt;E&gt;)</li>
 <li type="circle">net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/ProtectingIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">ProtectingIterator</span></a>&lt;Payload&gt; (implements net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators">ProtectedIterator</a>&lt;Payload&gt;)</li>
 <li type="circle">net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/RemoveHandlerIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">RemoveHandlerIterator</span></a>&lt;Payload&gt; (implements java.util.<a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util">Iterator</a>&lt;E&gt;)</li>
@@ -128,8 +131,10 @@
 <li type="circle">java.lang.<a href="http://docs.oracle.com/javase/8/docs/api/java/lang/RuntimeException.html?is-external=true" title="class or interface in java.lang"><span class="typeNameLink">RuntimeException</span></a>
 <ul>
 <li type="circle">net.markenwerk.commons.exceptions.<a href="net/markenwerk/commons/exceptions/ConversionException.html" title="class in net.markenwerk.commons.exceptions"><span class="typeNameLink">ConversionException</span></a></li>
-<li type="circle">net.markenwerk.commons.exceptions.<a href="net/markenwerk/commons/exceptions/CreationException.html" title="class in net.markenwerk.commons.exceptions"><span class="typeNameLink">CreationException</span></a></li>
-<li type="circle">net.markenwerk.commons.exceptions.<a href="net/markenwerk/commons/exceptions/EvaluationException.html" title="class in net.markenwerk.commons.exceptions"><span class="typeNameLink">EvaluationException</span></a></li>
+<li type="circle">net.markenwerk.commons.exceptions.<a href="net/markenwerk/commons/exceptions/HandlingException.html" title="class in net.markenwerk.commons.exceptions"><span class="typeNameLink">HandlingException</span></a></li>
+<li type="circle">net.markenwerk.commons.exceptions.<a href="net/markenwerk/commons/exceptions/ProcessingException.html" title="class in net.markenwerk.commons.exceptions"><span class="typeNameLink">ProcessingException</span></a></li>
+<li type="circle">net.markenwerk.commons.exceptions.<a href="net/markenwerk/commons/exceptions/ProductionException.html" title="class in net.markenwerk.commons.exceptions"><span class="typeNameLink">ProductionException</span></a></li>
+<li type="circle">net.markenwerk.commons.exceptions.<a href="net/markenwerk/commons/exceptions/ProvisioningException.html" title="class in net.markenwerk.commons.exceptions"><span class="typeNameLink">ProvisioningException</span></a></li>
 </ul>
 </li>
 </ul>
@@ -137,37 +142,32 @@
 </ul>
 </li>
 <li type="circle">net.markenwerk.commons.datastructures.<a href="net/markenwerk/commons/datastructures/Triple.html" title="class in net.markenwerk.commons.datastructures"><span class="typeNameLink">Triple</span></a>&lt;First,Second,Third&gt;</li>
+<li type="circle">net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/TripleIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">TripleIterator</span></a>&lt;Payload&gt; (implements net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators">ProtectedIterator</a>&lt;Payload&gt;)</li>
 <li type="circle">net.markenwerk.commons.datastructures.<a href="net/markenwerk/commons/datastructures/Tuple.html" title="class in net.markenwerk.commons.datastructures"><span class="typeNameLink">Tuple</span></a>&lt;First,Second&gt;</li>
+<li type="circle">net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/TupleIterator.html" title="class in net.markenwerk.commons.iterators"><span class="typeNameLink">TupleIterator</span></a>&lt;Payload&gt; (implements net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators">ProtectedIterator</a>&lt;Payload&gt;)</li>
 <li type="circle">net.markenwerk.commons.datastructures.<a href="net/markenwerk/commons/datastructures/Wrapper.html" title="class in net.markenwerk.commons.datastructures"><span class="typeNameLink">Wrapper</span></a>&lt;Payload&gt;</li>
 </ul>
 </li>
 </ul>
 <h2 title="Interface Hierarchy">Interface Hierarchy</h2>
 <ul>
-<li type="circle">net.markenwerk.commons.interfaces.<a href="net/markenwerk/commons/interfaces/Callback.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">Callback</span></a>&lt;Result&gt;</li>
+<li type="circle">net.markenwerk.commons.interfaces.<a href="net/markenwerk/commons/interfaces/Callback.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">Callback</span></a>&lt;Callee,Result&gt;</li>
 <li type="circle">net.markenwerk.commons.interfaces.<a href="net/markenwerk/commons/interfaces/Converter.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">Converter</span></a>&lt;From,To&gt;
 <ul>
 <li type="circle">net.markenwerk.commons.interfaces.<a href="net/markenwerk/commons/interfaces/Translator.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">Translator</span></a>&lt;From,To&gt;</li>
 </ul>
 </li>
-<li type="circle">net.markenwerk.commons.interfaces.<a href="net/markenwerk/commons/interfaces/Handler.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">Handler</span></a>&lt;Event&gt;</li>
+<li type="circle">net.markenwerk.commons.interfaces.<a href="net/markenwerk/commons/interfaces/Handler.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">Handler</span></a>&lt;Value&gt;</li>
 <li type="circle">java.util.<a href="http://docs.oracle.com/javase/8/docs/api/java/util/Iterator.html?is-external=true" title="class or interface in java.util"><span class="typeNameLink">Iterator</span></a>&lt;E&gt;
 <ul>
 <li type="circle">net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/ProtectedIterator.html" title="interface in net.markenwerk.commons.iterators"><span class="typeNameLink">ProtectedIterator</span></a>&lt;Payload&gt;</li>
 </ul>
 </li>
 <li type="circle">net.markenwerk.commons.iterators.<a href="net/markenwerk/commons/iterators/LookAhead.html" title="interface in net.markenwerk.commons.iterators"><span class="typeNameLink">LookAhead</span></a>&lt;Payload&gt;</li>
-<li type="circle">net.markenwerk.commons.interfaces.<a href="net/markenwerk/commons/interfaces/OrderProvider.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">OrderProvider</span></a>&lt;Order,Product&gt;
-<ul>
-<li type="circle">net.markenwerk.commons.interfaces.<a href="net/markenwerk/commons/interfaces/OrderProducer.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">OrderProducer</span></a>&lt;Order,Product&gt;</li>
-</ul>
-</li>
 <li type="circle">net.markenwerk.commons.interfaces.<a href="net/markenwerk/commons/interfaces/Predicate.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">Predicate</span></a>&lt;Subject&gt;</li>
-<li type="circle">net.markenwerk.commons.interfaces.<a href="net/markenwerk/commons/interfaces/Provider.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">Provider</span></a>&lt;Product&gt;
-<ul>
-<li type="circle">net.markenwerk.commons.interfaces.<a href="net/markenwerk/commons/interfaces/Producer.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">Producer</span></a>&lt;Product&gt;</li>
-</ul>
-</li>
+<li type="circle">net.markenwerk.commons.interfaces.<a href="net/markenwerk/commons/interfaces/Processor.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">Processor</span></a>&lt;Value&gt;</li>
+<li type="circle">net.markenwerk.commons.interfaces.<a href="net/markenwerk/commons/interfaces/Producer.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">Producer</span></a>&lt;Order,Product&gt;</li>
+<li type="circle">net.markenwerk.commons.interfaces.<a href="net/markenwerk/commons/interfaces/Provider.html" title="interface in net.markenwerk.commons.interfaces"><span class="typeNameLink">Provider</span></a>&lt;Product&gt;</li>
 </ul>
 </div>
 <!-- ======= START OF BOTTOM NAVBAR ====== -->
