--- a/serialized-form.html
+++ b/serialized-form.html
@@ -83,25 +83,43 @@
 <h3>Class <a href="net/markenwerk/commons/exceptions/ConversionException.html" title="class in net.markenwerk.commons.exceptions">net.markenwerk.commons.exceptions.ConversionException</a> extends <a href="http://docs.oracle.com/javase/8/docs/api/java/lang/RuntimeException.html?is-external=true" title="class or interface in java.lang">RuntimeException</a> implements Serializable</h3>
 <dl class="nameValue">
 <dt>serialVersionUID:</dt>
-<dd>8161906006366859761L</dd>
+<dd>-8951886523081829677L</dd>
 </dl>
 </li>
-<li class="blockList"><a name="net.markenwerk.commons.exceptions.CreationException">
+<li class="blockList"><a name="net.markenwerk.commons.exceptions.HandlingException">
 <!--   -->
 </a>
-<h3>Class <a href="net/markenwerk/commons/exceptions/CreationException.html" title="class in net.markenwerk.commons.exceptions">net.markenwerk.commons.exceptions.CreationException</a> extends <a href="http://docs.oracle.com/javase/8/docs/api/java/lang/RuntimeException.html?is-external=true" title="class or interface in java.lang">RuntimeException</a> implements Serializable</h3>
+<h3>Class <a href="net/markenwerk/commons/exceptions/HandlingException.html" title="class in net.markenwerk.commons.exceptions">net.markenwerk.commons.exceptions.HandlingException</a> extends <a href="http://docs.oracle.com/javase/8/docs/api/java/lang/RuntimeException.html?is-external=true" title="class or interface in java.lang">RuntimeException</a> implements Serializable</h3>
 <dl class="nameValue">
 <dt>serialVersionUID:</dt>
-<dd>8658949883506215155L</dd>
+<dd>-7969584903156652488L</dd>
 </dl>
 </li>
-<li class="blockList"><a name="net.markenwerk.commons.exceptions.EvaluationException">
+<li class="blockList"><a name="net.markenwerk.commons.exceptions.ProcessingException">
 <!--   -->
 </a>
-<h3>Class <a href="net/markenwerk/commons/exceptions/EvaluationException.html" title="class in net.markenwerk.commons.exceptions">net.markenwerk.commons.exceptions.EvaluationException</a> extends <a href="http://docs.oracle.com/javase/8/docs/api/java/lang/RuntimeException.html?is-external=true" title="class or interface in java.lang">RuntimeException</a> implements Serializable</h3>
+<h3>Class <a href="net/markenwerk/commons/exceptions/ProcessingException.html" title="class in net.markenwerk.commons.exceptions">net.markenwerk.commons.exceptions.ProcessingException</a> extends <a href="http://docs.oracle.com/javase/8/docs/api/java/lang/RuntimeException.html?is-external=true" title="class or interface in java.lang">RuntimeException</a> implements Serializable</h3>
 <dl class="nameValue">
 <dt>serialVersionUID:</dt>
-<dd>-1717421532938676308L</dd>
+<dd>9209467520610880460L</dd>
+</dl>
+</li>
+<li class="blockList"><a name="net.markenwerk.commons.exceptions.ProductionException">
+<!--   -->
+</a>
+<h3>Class <a href="net/markenwerk/commons/exceptions/ProductionException.html" title="class in net.markenwerk.commons.exceptions">net.markenwerk.commons.exceptions.ProductionException</a> extends <a href="http://docs.oracle.com/javase/8/docs/api/java/lang/RuntimeException.html?is-external=true" title="class or interface in java.lang">RuntimeException</a> implements Serializable</h3>
+<dl class="nameValue">
+<dt>serialVersionUID:</dt>
+<dd>-5672510627598518447L</dd>
+</dl>
+</li>
+<li class="blockList"><a name="net.markenwerk.commons.exceptions.ProvisioningException">
+<!--   -->
+</a>
+<h3>Class <a href="net/markenwerk/commons/exceptions/ProvisioningException.html" title="class in net.markenwerk.commons.exceptions">net.markenwerk.commons.exceptions.ProvisioningException</a> extends <a href="http://docs.oracle.com/javase/8/docs/api/java/lang/RuntimeException.html?is-external=true" title="class or interface in java.lang">RuntimeException</a> implements Serializable</h3>
+<dl class="nameValue">
+<dt>serialVersionUID:</dt>
+<dd>-1385646765423662218L</dd>
 </dl>
 </li>
 </ul>
