--- a/net/markenwerk/commons/datastructures/Right.html
+++ b/net/markenwerk/commons/datastructures/Right.html
@@ -269,8 +269,7 @@ extends <a href="../../../../net/markenwerk/commons/datastructures/Either.html" 
 <dd><code><a href="../../../../net/markenwerk/commons/datastructures/Either.html#isLeft--">isLeft</a></code>&nbsp;in class&nbsp;<code><a href="../../../../net/markenwerk/commons/datastructures/Either.html" title="class in net.markenwerk.commons.datastructures">Either</a>&lt;<a href="../../../../net/markenwerk/commons/datastructures/Right.html" title="type parameter in Right">Left</a>,<a href="../../../../net/markenwerk/commons/datastructures/Right.html" title="type parameter in Right">Payload</a>&gt;</code></dd>
 <dt><span class="returnLabel">Returns:</span></dt>
 <dd>If this <a href="../../../../net/markenwerk/commons/datastructures/Either.html" title="class in net.markenwerk.commons.datastructures"><code>Either</code></a> is a
-         <a href="../../../../net/markenwerk/commons/datastructures/Left.html" title="class in net.markenwerk.commons.datastructures"><code>Left</code></a> <a href="../../../../net/markenwerk/commons/datastructures/Either.html" title="class in net.markenwerk.commons.datastructures"><code>Either</code></a>
-         .</dd>
+         <a href="../../../../net/markenwerk/commons/datastructures/Left.html" title="class in net.markenwerk.commons.datastructures"><code>Left</code></a> <a href="../../../../net/markenwerk/commons/datastructures/Either.html" title="class in net.markenwerk.commons.datastructures"><code>Either</code></a>.</dd>
 </dl>
 </li>
 </ul>
@@ -312,7 +311,7 @@ extends <a href="../../../../net/markenwerk/commons/datastructures/Either.html" 
 <dt><span class="returnLabel">Returns:</span></dt>
 <dd>If this <a href="../../../../net/markenwerk/commons/datastructures/Either.html" title="class in net.markenwerk.commons.datastructures"><code>Either</code></a> is a
          <a href="../../../../net/markenwerk/commons/datastructures/Right.html" title="class in net.markenwerk.commons.datastructures"><code>Right</code></a>
-         <a href="../../../../net/markenwerk/commons/datastructures/Either.html" title="class in net.markenwerk.commons.datastructures"><code>Either</code></a> .</dd>
+         <a href="../../../../net/markenwerk/commons/datastructures/Either.html" title="class in net.markenwerk.commons.datastructures"><code>Either</code></a>.</dd>
 </dl>
 </li>
 </ul>
