--- a/net/markenwerk/commons/exceptions/package-use.html
+++ b/net/markenwerk/commons/exceptions/package-use.html
@@ -100,20 +100,32 @@
 <tbody>
 <tr class="altColor">
 <td class="colOne"><a href="../../../../net/markenwerk/commons/exceptions/class-use/ConversionException.html#net.markenwerk.commons.interfaces">ConversionException</a>
-<div class="block">A <a href="../../../../net/markenwerk/commons/exceptions/ConversionException.html" title="class in net.markenwerk.commons.exceptions"><code>ConversionException</code></a> indicates that an arbitrary conversion
- (transformation, translation, projection, evaluation, ...) has failed.</div>
+<div class="block">A <a href="../../../../net/markenwerk/commons/exceptions/ConversionException.html" title="class in net.markenwerk.commons.exceptions"><code>ConversionException</code></a> indicates that a <a href="../../../../net/markenwerk/commons/interfaces/Converter.html" title="interface in net.markenwerk.commons.interfaces"><code>Converter</code></a> (or
+ <a href="../../../../net/markenwerk/commons/interfaces/Translator.html" title="interface in net.markenwerk.commons.interfaces"><code>Translator</code></a>) failed to convert (or revert )a value.</div>
 </td>
 </tr>
 <tr class="rowColor">
-<td class="colOne"><a href="../../../../net/markenwerk/commons/exceptions/class-use/CreationException.html#net.markenwerk.commons.interfaces">CreationException</a>
-<div class="block">A <a href="../../../../net/markenwerk/commons/exceptions/CreationException.html" title="class in net.markenwerk.commons.exceptions"><code>CreationException</code></a> indicates that a <a href="../../../../net/markenwerk/commons/interfaces/Producer.html" title="interface in net.markenwerk.commons.interfaces"><code>Producer</code></a> failed to
- produce a product.</div>
+<td class="colOne"><a href="../../../../net/markenwerk/commons/exceptions/class-use/HandlingException.html#net.markenwerk.commons.interfaces">HandlingException</a>
+<div class="block">A <a href="../../../../net/markenwerk/commons/exceptions/HandlingException.html" title="class in net.markenwerk.commons.exceptions"><code>HandlingException</code></a> indicates that a <a href="../../../../net/markenwerk/commons/interfaces/Handler.html" title="interface in net.markenwerk.commons.interfaces"><code>Handler</code></a> failed to
+ handle a value.</div>
 </td>
 </tr>
 <tr class="altColor">
-<td class="colOne"><a href="../../../../net/markenwerk/commons/exceptions/class-use/EvaluationException.html#net.markenwerk.commons.interfaces">EvaluationException</a>
-<div class="block">A <a href="../../../../net/markenwerk/commons/exceptions/EvaluationException.html" title="class in net.markenwerk.commons.exceptions"><code>EvaluationException</code></a> indicates that the evaluation of a
- <a href="../../../../net/markenwerk/commons/interfaces/Predicate.html" title="interface in net.markenwerk.commons.interfaces"><code>Predicate</code></a> has failed.</div>
+<td class="colOne"><a href="../../../../net/markenwerk/commons/exceptions/class-use/ProcessingException.html#net.markenwerk.commons.interfaces">ProcessingException</a>
+<div class="block">A <a href="../../../../net/markenwerk/commons/exceptions/ProcessingException.html" title="class in net.markenwerk.commons.exceptions"><code>ProcessingException</code></a> indicates that a <a href="http://docs.oracle.com/javase/8/docs/api/javax/annotation/processing/Processor.html?is-external=true" title="class or interface in javax.annotation.processing"><code>Processor</code></a> failed to
+ process a value.</div>
+</td>
+</tr>
+<tr class="rowColor">
+<td class="colOne"><a href="../../../../net/markenwerk/commons/exceptions/class-use/ProductionException.html#net.markenwerk.commons.interfaces">ProductionException</a>
+<div class="block">A <a href="../../../../net/markenwerk/commons/exceptions/ProductionException.html" title="class in net.markenwerk.commons.exceptions"><code>ProductionException</code></a> indicates that a <a href="../../../../net/markenwerk/commons/interfaces/Producer.html" title="interface in net.markenwerk.commons.interfaces"><code>Producer</code></a> failed to
+ produce a value.</div>
+</td>
+</tr>
+<tr class="altColor">
+<td class="colOne"><a href="../../../../net/markenwerk/commons/exceptions/class-use/ProvisioningException.html#net.markenwerk.commons.interfaces">ProvisioningException</a>
+<div class="block">A <a href="../../../../net/markenwerk/commons/exceptions/ProvisioningException.html" title="class in net.markenwerk.commons.exceptions"><code>ProvisioningException</code></a> indicates that a <a href="http://docs.oracle.com/javase/8/docs/api/java/security/Provider.html?is-external=true" title="class or interface in java.security"><code>Provider</code></a> failed to
+ provide a value.</div>
 </td>
 </tr>
 </tbody>
